--- a/app/src/main/res/drawable/edittext.xml
+++ b/app/src/main/res/drawable/edittext.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid
-        android:color="#ffffff"
-        >
+    <solid android:color="#ffffff" />
+    <stroke
+        android:color="@android:color/darker_gray"
+        android:width="1dp"/>
+    <corners android:radius="15dp"/>
 
-    </solid>
-    <corners
-        android:radius="15dp">
-
-    </corners>
 </shape>
