--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,7 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
     android:layout_width="match_parent">
 
     <ListView
@@ -33,8 +32,8 @@
             android:background="@drawable/edittext"
             android:padding="9dp"
             android:hint="@string/inputhint"
-            android:textSize="24sp"
-            android:inputType="text"
+            android:textSize="18sp"
+            android:inputType="textMultiLine"
             android:textColor="#000000"
             android:layout_weight="8"
             android:textColorHint="@android:color/darker_gray" />
@@ -43,8 +42,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/send"
+            android:textAllCaps="false"
             android:textColor="#ffffff"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
             android:padding="9dp"
