--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,18 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <Button
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <RelativeLayout
+        android:id="@+id/profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="chat"
-        android:id="@+id/chat_btn"/>
-    <Button
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="3dp"
+        >
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/home_profile_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@color/colorAccent"
+            android:layout_marginHorizontal="10dp"
+            app:civ_border_width="2dp"
+            android:layout_gravity="center"
+            app:civ_border_color="#FFFFFF"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/home_user_name"
+            android:text="@string/user_name"
+            android:textStyle="normal|bold"
+            android:textSize="24sp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/home_profile_image"
+            />
+        <Button
+            style=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="logout"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_centerVertical="true"
+            android:id="@+id/go_to_login"/>
+    </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/profile"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="login"
-        android:layout_below="@+id/chat_btn"
-        android:id="@+id/go_to_login"/>
+        android:layout_alignParentBottom="true">
+        <Button
+            style=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="chat"
+            android:id="@+id/chat_btn"/>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
