--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".RegisterActivity"
     android:background="#39649A"
     >
 
 
     <ImageView
-        android:id="@+id/login_logo"
+        android:id="@+id/register_logo"
         android:layout_marginHorizontal="30dp"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
@@ -19,11 +19,28 @@
         android:layout_marginTop="0dp" />
     <EditText
         android:autofillHints="no"
-        android:id="@+id/login_email_input"
+        android:id="@+id/register_name_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:layout_below="@id/login_logo"
+        android:layout_below="@id/register_logo"
+        android:layout_marginTop="0dp"
+        android:padding="10dp"
+        android:hint="@string/fui_name_hint"
+        android:inputType="text"
+        android:textColor="#ffffff"
+        android:textColorHint="@android:color/darker_gray"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:backgroundTint="#00B8D4"
+        />
+    <EditText
+        android:autofillHints="no"
+        android:id="@+id/register_email_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_below="@id/register_name_input"
         android:layout_marginTop="0dp"
         android:padding="10dp"
         android:hint="@string/fui_email_hint"
@@ -33,13 +50,13 @@
         android:textSize="25sp"
         android:textStyle="bold"
         android:backgroundTint="#00B8D4"
-       />
+        />
     <EditText
-        android:id="@+id/login_password_input"
+        android:id="@+id/register_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:layout_below="@id/login_email_input"
+        android:layout_below="@id/register_email_input"
         android:layout_marginTop="6dp"
         android:backgroundTint="#00B8D4"
         android:padding="10dp"
@@ -53,8 +70,8 @@
 
         />
     <Button
-        android:layout_below="@id/login_password_input"
-        android:id="@+id/login_enter_btn"
+        android:layout_below="@id/register_password_input"
+        android:id="@+id/register_enter_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -63,49 +80,12 @@
         android:padding="10dp"
         android:textAllCaps="false"
         android:textSize="24sp"
-        android:text="@string/login"
+        android:text="@string/register"
         android:textColor="#ffffff"
         android:background="#23739F"
         android:textStyle="bold">
     </Button>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_enter_btn"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="15dp"
-        >
 
-        <TextView
-            android:id="@+id/register_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/register"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:layout_weight="1"
-            android:textSize="24sp"
-            android:textColor="#ffffff"
-            android:background="#39649A"
-            >
-        </TextView>
-        <TextView
-            android:id="@+id/forget_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textSize="24sp"
-            android:text="@string/forget_password"
-            android:textColor="#ffffff"
-            android:background="#39649A"
-            >
-        </TextView>
-    </LinearLayout>
 
 
 
