--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginVertical="3dp"
         >
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_profile_image"
+            android:id="@+id/message_profile_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@color/colorAccent"
@@ -28,7 +28,8 @@
             android:id="@+id/message_user"
             android:text="@string/user_name"
             android:textStyle="normal|bold"
-            android:layout_toEndOf="@id/user_profile_image"
+            android:layout_alignBottom="@id/message_profile_image"
+            android:layout_toEndOf="@id/message_profile_image"
             />
     </RelativeLayout>
 
