--- a/app/src/main/res/layout/receiver_item.xml
+++ b/app/src/main/res/layout/receiver_item.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_profile_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@color/colorAccent"
         android:layout_marginHorizontal="10dp"
+        android:layout_alignParentEnd="true"
         app:civ_border_width="2dp"
         android:layout_gravity="center"
         app:civ_border_color="#FFFFFF"
@@ -21,6 +21,6 @@
         android:textStyle="normal|bold"
         android:textSize="18sp"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/user_profile_image"
-    />
+        android:layout_toLeftOf="@id/user_profile_image"
+        />
 </RelativeLayout>
