finish 2 people ChatActivity

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,11 +3,10 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/message_listview"
-        android:stackFromBottom="true"
+        android:id="@+id/message_recyclerview"
         android:transcriptMode="alwaysScroll"
         android:layout_above="@+id/input_linear_layout"
         android:dividerHeight="16dp"
