--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
-        android:id="@+id/profile"
+        android:id="@+id/profile_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
@@ -14,11 +14,11 @@
             android:id="@+id/home_profile_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@color/colorAccent"
             android:layout_marginHorizontal="10dp"
             app:civ_border_width="2dp"
             android:layout_gravity="center"
             app:civ_border_color="#FFFFFF"
+            android:src="@drawable/loading"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -31,19 +31,30 @@
             />
         <Button
             style=""
+            android:background="@drawable/button_blue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/logout"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="24sp"
+            android:padding="10dp"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:layout_centerVertical="true"
             android:id="@+id/go_to_login"/>
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_below="@id/profile_layout"
+        android:layout_height="2dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="#c0c0c0"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/user_recyclerview"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/profile"
+        android:layout_below="@id/profile_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
