--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -15,19 +15,19 @@
             android:id="@+id/message_profile_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@color/colorAccent"
             android:layout_marginHorizontal="3dp"
             app:civ_border_width="2dp"
             android:layout_gravity="center"
             app:civ_border_color="#FFFFFF"
+            android:src="@drawable/loading"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
             android:id="@+id/message_user"
             android:textStyle="normal|bold"
-            android:layout_alignBottom="@id/message_profile_image"
+            android:gravity="center"
+            android:layout_centerVertical="true"
             />
     </RelativeLayout>
 
