--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -2,16 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginVertical="3dp"
+    android:id="@+id/user_relative_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_profile_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@color/colorAccent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="10dp"
         app:civ_border_width="2dp"
         android:layout_gravity="center"
         app:civ_border_color="#FFFFFF"
+        android:src="@drawable/loading"
         />
     <TextView
         android:layout_width="wrap_content"
