--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,8 +7,6 @@
     tools:context=".RegisterActivity"
     android:background="#39649A"
     >
-
-
     <ImageView
         android:id="@+id/register_logo"
         android:layout_marginHorizontal="30dp"
@@ -16,7 +14,7 @@
         android:layout_height="200dp"
         android:src="@drawable/logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp" />
+        android:layout_marginTop="10dp" />
     <EditText
         android:autofillHints="no"
         android:id="@+id/register_name_input"
@@ -26,11 +24,11 @@
         android:layout_below="@id/register_logo"
         android:layout_marginTop="0dp"
         android:padding="10dp"
-        android:hint="@string/fui_name_hint"
+        android:hint="@string/name"
         android:inputType="text"
         android:textColor="#ffffff"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="25sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:backgroundTint="#00B8D4"
         />
@@ -43,11 +41,11 @@
         android:layout_below="@id/register_name_input"
         android:layout_marginTop="0dp"
         android:padding="10dp"
-        android:hint="@string/fui_email_hint"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textColor="#ffffff"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="25sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:backgroundTint="#00B8D4"
         />
@@ -61,11 +59,11 @@
         android:backgroundTint="#00B8D4"
         android:padding="10dp"
         android:autofillHints="no"
-        android:hint="@string/fui_password_hint"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="#ffffff"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="25sp"
+        android:textSize="18sp"
         android:textStyle="bold"
 
         />
@@ -79,15 +77,10 @@
         android:textAlignment="center"
         android:padding="10dp"
         android:textAllCaps="false"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:text="@string/register"
         android:textColor="#ffffff"
         android:background="#23739F"
         android:textStyle="bold">
     </Button>
-
-
-
-
-
 </RelativeLayout>
