--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -15,7 +15,7 @@
         android:layout_height="200dp"
         android:src="@drawable/logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp" />
+        android:layout_marginTop="10dp" />
     <EditText
         android:autofillHints="no"
         android:id="@+id/forget_email_input"
@@ -25,11 +25,11 @@
         android:layout_below="@id/forget_logo"
         android:layout_marginTop="0dp"
         android:padding="10dp"
-        android:hint="@string/fui_email_hint"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textColor="#ffffff"
         android:textColorHint="@android:color/darker_gray"
-        android:textSize="25sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:backgroundTint="#00B8D4"
         />
@@ -43,7 +43,7 @@
         android:textAlignment="center"
         android:padding="10dp"
         android:textAllCaps="false"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:text="@string/reset"
         android:textColor="#ffffff"
         android:background="#23739F"
