--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,8 +12,8 @@
         >
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/home_profile_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="10dp"
             app:civ_border_width="2dp"
             android:layout_gravity="center"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/home_user_name"
             android:textStyle="normal|bold"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/home_profile_image"
             />
@@ -37,7 +37,7 @@
             android:text="@string/logout"
             android:textAllCaps="false"
             android:textColor="#ffffff"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:padding="10dp"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
@@ -56,11 +56,5 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/profile_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-
-
-
+        android:layout_height="match_parent"/>
 </RelativeLayout>
