--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,7 +11,9 @@
         android:layout_above="@+id/input_linear_layout"
         android:dividerHeight="16dp"
         android:divider="@android:color/transparent"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:scrollbars="vertical"
+        />
 
     <LinearLayout
         android:id="@+id/input_linear_layout"
