solve keyboard pop up problem

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,17 +1,16 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/message_recyclerview"
-        android:transcriptMode="alwaysScroll"
         android:layout_above="@+id/input_linear_layout"
-        android:dividerHeight="16dp"
+        android:dividerHeight="0dp"
         android:divider="@android:color/transparent"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:scrollbars="vertical"
         />
 
