--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#283593</color>
-    <color name="colorPrimaryDark">#2E7D32</color>
-    <color name="colorAccent">#0277BD</color>
+    <color name="colorPrimary">#39649A</color>
+    <color name="colorPrimaryDark">#39649A</color>
+    <color name="colorAccent">#39649A</color>
 
 </resources>
